<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/node_info_layout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:cardCornerRadius="15dp"
        android:elevation="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="30dp">

        <TextView
            android:id="@+id/number_in_backstack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/level_s"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:id="@+id/node_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/child_node"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/return_to_root_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/node_info_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/add_child"
        android:layout_marginTop="20dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_child"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_child"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/node_info_layout"
        app:layout_constraintStart_toEndOf="@id/return_to_root_btn"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/childs_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/add_child"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="20dp"
        tools:listitem="@layout/child_recycler_item"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        />

</androidx.constraintlayout.widget.ConstraintLayout>